--- a/index.html
+++ b/index.html
@@ -414,7 +414,8 @@ ul.byline li + li {
   margin-top: 0.25em;
 }
 </style></head><body><div class="reveal"><div class="slides"><section class="title" data-state="title"><h1>Nachhaltigkeitstracker</h1><div class="preamble"><div class="paragraph"><p>Lind Arifi, Leonie Findenig, Lena Graßauer, Leona Feichtinger</p></div></div></section>
-<section><section id="_nachhaltigkeitstracker_uml_diagramme"><h2>Nachhaltigkeitstracker - UML-Diagramme</h2></section><section id="_datenmodell_uml_klassendiagramm"><h2>Datenmodell (UML-Klassendiagramm)</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre>@startuml
+<section><section id="_überblick"><h2>Überblick</h2></section><section id="_1_datenmodell"><h2>1. Datenmodell</h2></section><section id="_2_anwendungsfalldiagramm"><h2>2. Anwendungsfalldiagramm</h2></section><section id="_3_funktionsweise_des_nachhaltigkeitstrackers"><h2>3. Funktionsweise des Nachhaltigkeitstrackers</h2></section><section id="_4_problemlösung_durch_die_anwendung"><h2>4. Problemlösung durch die Anwendung</h2><div class="slide-content"><hr></div></section></section>
+<section id="_datenmodell_uml_klassendiagramm"><h2>Datenmodell - UML-Klassendiagramm</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre>@startuml
 class Produkt {
     - ID: int
     - Name: String
@@ -444,29 +445,57 @@ class Nutzer {
 
 Produkt &lt;--  Barcode
 Produkt &lt;-- ProduktKategorie
-@enduml</pre></div></div></div></section><section id="_anwendungsfalldiagramm"><h2>Anwendungsfalldiagramm</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre>@startuml
-actor Kunde
+@enduml</pre></div></div>
+<div class="listingblock"><div class="content"><pre>== Anwendungsfalldiagramm
 
-rectangle "Nachhaltigkeitstracker" {
+[plantuml]</pre></div></div>
+<div class="paragraph"><p>@startuml
+actor Kunde</p></div>
+<div class="paragraph"><p>rectangle "Nachhaltigkeitstracker" {
   usecase "Produkt scannen" as UC1
   usecase "Nachhaltigkeitsbewertung anzeigen" as UC2
   usecase "Produkt manuell suchen" as UC3
-}
+}</p></div>
+<div class="paragraph"><p>Kunde&#8201;&#8212;&#8201;UC1
+Kunde&#8201;&#8212;&#8201;UC2
+Kunde&#8201;&#8212;&#8201;UC3</p></div>
+<div class="paragraph"><p>@enduml</p></div>
+<div class="listingblock"><div class="content"><pre>**Design-Tipp:**
+Verwenden Sie visuelle Trennlinien und einheitliche Symbole, um die Akteure und Use-Cases hervorzuheben.
 
-Kunde -- UC1
-Kunde -- UC2
-Kunde -- UC3
+---
 
-@enduml</pre></div></div></div></section></section>
-<section id="_welche_probleme_löst_es"><h2>Welche Probleme löst es</h2><div class="slide-content"><div class="paragraph"><p>Der Nachhaltigkeitstracker hilft Leuten schneller Umweltfreundliche und ökologische Produkte zu finden. Dazu beweist es Leuten unsere Transparenz zu sehen/glauben.</p></div></div></section>
-<section id="_aufgabenstellung"><h2>Aufgabenstellung</h2><div class="slide-content"><div class="paragraph"><p>Entwicklung einer Anwendung zur Bewertung der Nachhaltigkeit von Produkten.
-Die Anwendung soll eine Datenbank enthalten, in der Produkte mit relevanten Informationen (z. B. Herkunft, Hersteller, Nachhaltigkeitsscore) gespeichert werden.
-Nutzer können Produkte mithilfe einer Suchleiste oder durch Scannen eines QR-codes finden und deren Nachhaltigkeitsbewertung abrufen.</p></div>
-<div class="paragraph"><p>Hauptfunktionen:</p></div>
-<div class="paragraph"><p>Datenbank: Speicherung von Produktdaten inklusive Kategorien und Barcodes
-Produktsuche: Manuelle Suche oder Barcode-Scan
-Nachhaltigkeitsbewertung: Anzeige von Umwelt- und Nachhaltigkeitsinformationen
-Ziel ist es, Transparenz zu schaffen und nachhaltige Kaufentscheidungen zu erleichtern.</p></div></div></section></div></div><script src="https://cdn.jsdelivr.net/npm/reveal.js@4.5.0/dist/reveal.js"></script><script>Array.prototype.slice.call(document.querySelectorAll('.slides section')).forEach(function(slide) {
+== Problemstellung und Lösungsansatz
+
+=== Problem:
+Viele Konsumenten sind unsicher über die Nachhaltigkeit von Produkten und haben Schwierigkeiten, umweltfreundliche Optionen schnell zu finden.
+
+=== Lösung:
+Der Nachhaltigkeitstracker ermöglicht eine einfache Suche nach nachhaltigen Produkten und bietet transparente Informationen zu deren ökologischen Eigenschaften.
+
+== Aufgabenstellung und Funktionen
+
+=== Ziel:
+Entwicklung einer Anwendung zur Bewertung der Nachhaltigkeit von Produkten. Nutzer sollen über eine Datenbank nachhaltige Produkte finden können.
+
+=== Hauptfunktionen:
+- **Datenbank:** Speicherung relevanter Produktdaten
+- **Produktsuche:** Manuelle Suche oder Barcode-Scan
+- **Nachhaltigkeitsbewertung:** Anzeige von Umwelt- und Nachhaltigkeitsinformationen
+
+**Design-Tipp:**
+Verwenden Sie eine klare Bullet-Point-Liste oder Icons zur Darstellung der Funktionen.
+
+---
+
+== Fazit und Ausblick
+
+Der Nachhaltigkeitstracker fördert umweltbewusste Kaufentscheidungen und bietet eine transparente Übersicht über Produkte.
+
+=== Ausblick:
+Weitere Erweiterungen könnten eine Bewertung durch Nutzer oder Kooperationen mit Herstellern umfassen.
+
+---</pre></div></div></div></section></div></div><script src="https://cdn.jsdelivr.net/npm/reveal.js@4.5.0/dist/reveal.js"></script><script>Array.prototype.slice.call(document.querySelectorAll('.slides section')).forEach(function(slide) {
   if (slide.getAttribute('data-background-color')) return;
   // user needs to explicitly say he wants CSS color to override otherwise we might break custom css or theme (#226)
   if (!(slide.classList.contains('canvas') || slide.classList.contains('background'))) return;
