--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ ul.byline li + li {
 }
 </style></head><body><div class="reveal"><div class="slides"><section class="title" data-state="title"><h1>Nachhaltigkeitstracker</h1><div class="preamble"><div class="paragraph"><p>Lind Arifi, Leonie Findenig, Lena Graßauer, Leona Feichtinger</p></div></div></section>
 <section><section id="_überblick"><h2>Überblick</h2></section><section id="_1_datenmodell"><h2>1. Datenmodell</h2></section><section id="_2_anwendungsfalldiagramm"><h2>2. Anwendungsfalldiagramm</h2></section><section id="_3_funktionsweise_des_nachhaltigkeitstrackers"><h2>3. Funktionsweise des Nachhaltigkeitstrackers</h2></section><section id="_4_problemlösung_durch_die_anwendung"><h2>4. Problemlösung durch die Anwendung</h2><div class="slide-content"><hr></div></section></section>
-<section id="_datenmodell_uml_klassendiagramm"><h2>Datenmodell - UML-Klassendiagramm</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre>@startuml
+<section><section id="_datenmodell_uml_klassendiagramm"><h2>Datenmodell - UML-Klassendiagramm</h2><div class="slide-content"><hr></div></section><section id="_klassendiagram"><h2>Klassendiagram</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre>@startuml
 class Produkt {
     - ID: int
     - Name: String
@@ -446,8 +446,7 @@ class Nutzer {
 Produkt &lt;--  Barcode
 Produkt &lt;-- ProduktKategorie
 @enduml</pre></div></div>
-<hr></div></section>
-<section id="_anwendungsfalldiagramm"><h2>Anwendungsfalldiagramm</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre>@startuml
+<hr></div></section><section id="_anwendungsfalldiagramm"><h2>Anwendungsfalldiagramm</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre>@startuml
 actor Kunde
 
 rectangle "Nachhaltigkeitstracker" {
@@ -461,7 +460,7 @@ Kunde -- UC2
 Kunde -- UC3
 
 @enduml</pre></div></div>
-<hr></div></section>
+<hr></div></section></section>
 <section><section id="_problemstellung_und_lösungsansatz"><h2>Problemstellung und Lösungsansatz</h2><div class="slide-content"><hr></div></section><section id="_problem"><h2>Problem:</h2><div class="slide-content"><div class="paragraph"><p>Viele Konsumenten sind unsicher über die Nachhaltigkeit von Produkten und haben Schwierigkeiten, umweltfreundliche Optionen schnell zu finden.</p></div></div></section><section id="_lösung"><h2>Lösung:</h2><div class="slide-content"><div class="paragraph"><p>Der Nachhaltigkeitstracker ermöglicht eine einfache Suche nach nachhaltigen Produkten und bietet transparente Informationen zu deren ökologischen Eigenschaften.</p></div>
 <hr></div></section></section>
 <section><section id="_aufgabenstellung_und_funktionen"><h2>Aufgabenstellung und Funktionen</h2><div class="slide-content"><hr></div></section><section id="_ziel"><h2>Ziel:</h2><div class="slide-content"><div class="paragraph"><p>Entwicklung einer Anwendung zur Bewertung der Nachhaltigkeit von Produkten. Nutzer sollen über eine Datenbank nachhaltige Produkte finden können.
