--- a/index.html
+++ b/index.html
@@ -442,8 +442,7 @@ class Nutzer {
 
 Budget &lt;-- Ausgabe
 Nutzer &lt;-- Budget
-@enduml</pre></div></div>
-<hr></div></section><section id="_anwendungsfalldiagramm"><h2>Anwendungsfalldiagramm</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre>@startuml
+@enduml</pre></div></div></div></section><section id="_anwendungsfalldiagramm"><h2>Anwendungsfalldiagramm</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre>@startuml
 actor Nutzer
 
 rectangle "Budgetplaner" {
