--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@ ul.byline li + li {
   margin-top: 0.25em;
 }
 </style></head><body><div class="reveal"><div class="slides"><section class="title" data-state="title"><h1>Budgetplaner</h1><div class="preamble"><div class="paragraph"><p>Lind Arifi, Leonie Findenig, Lena Graßauer, Leona Feichtinger</p></div></div></section>
-<section><section id="_überblick"><h2>Überblick</h2></section><section id="_1_datenmodell"><h2>1. Datenmodell</h2></section><section id="_2_anwendungsfalldiagramm"><h2>2. Anwendungsfalldiagramm</h2></section><section id="_3_funktionsweise_des_nachhaltigkeitstrackers"><h2>3. Funktionsweise des Nachhaltigkeitstrackers</h2></section><section id="_4_problemlösung_durch_die_anwendung"><h2>4. Problemlösung durch die Anwendung</h2><div class="slide-content"><hr></div></section></section>
-<section><section id="_datenmodell_uml_klassendiagramm"><h2>Datenmodell - UML-Klassendiagramm</h2><div class="slide-content"><hr></div></section><section id="_klassendiagram"><h2>Klassendiagram</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre>@startuml
+<section><section id="_überblick"><h2>Überblick</h2></section><section id="_1_datenmodell"><h2>1. Datenmodell</h2></section><section id="_2_anwendungsfalldiagramm"><h2>2. Anwendungsfalldiagramm</h2></section><section id="_3_funktionsweise_des_nachhaltigkeitstrackers"><h2>3. Funktionsweise des Nachhaltigkeitstrackers</h2></section><section id="_4_problemlösung_durch_die_anwendung"><h2>4. Problemlösung durch die Anwendung</h2></section></section>
+<section><section id="_datenmodell_uml_klassendiagramm"><h2>Datenmodell - UML-Klassendiagramm</h2></section><section id="_klassendiagram"><h2>Klassendiagram</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre>@startuml
 @startuml
 class Budget {
 - ID: int
